--- a/GraphicCalc/src/gui/GuiGraph.form
+++ b/GraphicCalc/src/gui/GuiGraph.form
@@ -57,7 +57,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jTxtXMin1" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="jTxtXMax" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -84,7 +84,7 @@
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTxtXMin" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTxtXMin1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTxtXMax" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTxtYMin" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -105,8 +105,14 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTxtXMin">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="-3.0"/>
+          </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTxtXMin1">
+        <Component class="javax.swing.JTextField" name="jTxtXMax">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="3.0"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -119,6 +125,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTxtYMin">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="-3.0"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
@@ -126,6 +135,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTxtYMax">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="3.0"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jBtnRedessiner">
           <Properties>
@@ -141,6 +153,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTxtPas">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="0.1"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
